--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "flashcube.github.io",
+  "name": "flashcube",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -32,5 +32,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "^1.18.2"
   }
 }
