--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "flashcube",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://flashcube.github.io/",
   "dependencies": {
     "@types/jest": "24.0.18",
     "@types/node": "12.7.4",
@@ -16,7 +17,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && gh-pages -d build -b master"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -34,6 +36,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^2.1.1",
     "prettier": "^1.18.2"
   }
 }
