--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "@types/node": "12.7.4",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
+    "grommet": "^2.7.9",
+    "grommet-icons": "^4.3.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-scripts": "3.1.1",
+    "styled-components": "^4.4.0",
     "typescript": "^3.6.3"
   },
   "scripts": {
