--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   },
   "devDependencies": {
     "deepmerge": "^4.0.0",
-    "gh-pages": "^2.1.1",
+    "gh-pages": "3.2.3",
     "prettier": "^1.18.2"
   }
 }
