--- a/package.json
+++ b/package.json
@@ -23,6 +23,13 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "prettier": {
+    "trailingComma": "es5",
+    "tabWidth": 2,
+    "semi": true,
+    "singleQuote": true,
+    "arrowParens": "avoid"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -38,6 +45,6 @@
   "devDependencies": {
     "deepmerge": "^4.0.0",
     "gh-pages": "3.2.3",
-    "prettier": "^1.18.2"
+    "prettier": "2.5.1"
   }
 }
