--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "private": true,
   "homepage": "https://flashcube.github.io/",
   "dependencies": {
-    "@types/jest": "24.0.18",
+    "@types/jest": "27.4.0",
     "@types/node": "12.7.4",
-    "@types/react": "16.9.2",
-    "@types/react-dom": "16.9.0",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
+    "@types/react": "17.0.38",
+    "@types/react-dom": "17.0.11",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-scripts": "^5.0.0",
-    "typescript": "^3.6.3"
+    "typescript": "4.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
