--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "homepage": "https://flashcube.github.io/",
   "dependencies": {
     "@types/jest": "27.4.0",
-    "@types/node": "12.7.4",
     "@types/react": "17.0.38",
     "@types/react-dom": "17.0.11",
     "react": "17.0.2",
@@ -43,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "@types/node": "^16.11.19",
     "deepmerge": "^4.0.0",
     "gh-pages": "3.2.3",
     "prettier": "2.5.1"
