--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "homepage": "https://flashcube.github.io/",
   "dependencies": {
+    "@carbonplan/theme": "^7.0.0",
     "react": "17.0.2",
     "react-app-polyfill": "3.0.0",
     "react-dev-utils": "12.0.0",
     "react-dom": "17.0.2",
-    "react-refresh": "0.11.0"
+    "react-refresh": "0.11.0",
+    "theme-ui": "^0.13.1"
   },
   "scripts": {
     "start": "node scripts/start.js",
@@ -142,7 +144,15 @@
   },
   "babel": {
     "presets": [
-      "react-app"
+      "react-app",
+      [
+        "@babel/preset-react",
+        {
+          "importSource": "theme-ui",
+          "runtime": "automatic",
+          "throwIfNamespace": false
+        }
+      ]
     ]
   }
 }
