--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-app-polyfill": "3.0.0",
     "react-dev-utils": "12.0.0",
     "react-dom": "17.0.2",
+    "react-modal": "^3.14.4",
     "react-refresh": "0.11.0",
     "theme-ui": "^0.13.1"
   },
@@ -48,6 +49,7 @@
     "@types/node": "16.11.19",
     "@types/react": "17.0.38",
     "@types/react-dom": "17.0.11",
+    "@types/react-modal": "^3.13.1",
     "babel-jest": "27.4.6",
     "babel-loader": "8.2.3",
     "babel-plugin-named-asset-import": "0.3.8",
