--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://flashcube.github.io/",
   "dependencies": {
     "@carbonplan/theme": "^7.0.0",
+    "@component-controls/components": "^4.0.3",
     "react": "17.0.2",
     "react-app-polyfill": "3.0.0",
     "react-dev-utils": "12.0.0",
