--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
     "@svgr/webpack": "6.1.2",
     "@types/jest": "27.4.0",
-    "@types/node": "16.11.19",
+    "@types/node": "^16.11.47",
     "@types/react": "17.0.38",
     "@types/react-dom": "17.0.11",
     "@types/react-modal": "^3.13.1",
